# SWE-bench_Pro-os

./: README.md  pyproject.toml  requirements.txt
swebench/harness/: image_uri.py  run_local_evaluation.py
